hphp/hack/test/typecheck/disallow_array_addition.php.exp
File "disallow_array_addition.php", line 4, characters 10-16:
Typing error (Typing[4110])
File "disallow_array_addition.php", line 4, characters 10-11:
Expected num because this is used in an arithmetic operation
File "disallow_array_addition.php", line 3, characters 14-23:
But got varray<int>
