hphp/hack/test/typecheck/disallow_array_addition.php
<?hh // strict

function foo(array<int> $a, array<int> $b): mixed {
  return $a + $b;
}
